src/main/java/org/example/moviesplatform/error/model/ActorNotFoundException.java
package org.example.moviesplatform.error.model;

public class ActorNotFoundException extends RuntimeException {
    public ActorNotFoundException(String message) {
        super(message);
    }
}
